--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body, html {
 }
 .bg {
   /* The image used */
-  background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).jpg");
+  background-image: url("yoonahbae.github.io/photo_band.img.768.high.jpeg
+");
 
   /* Full height */
   height: 100%;
