--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body, html {
 }
 .bg {
   /* The image used */
-  background-image: url("yoonahbae.github.io/photo_band.img.768.high.jpeg
-");
+  background-image: url("yoonahbae.github.io/photo_band.img.768.high.jpeg");
 
   /* Full height */
   height: 100%;
